# youtube-downloader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml
youtube_downloader/: __init__.py  cli.py  downloader.py
